--- a/index.html
+++ b/index.html
@@ -1,1 +1,219 @@
-ECHO is on.
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Quarterback v6</title>
+	<link rel="stylesheet" type="text/css" href="public/reset.css">
+	<link rel="stylesheet" type="text/css" href="public/style.css">
+	<link rel="stylesheet" type="text/css" href="public/page.css">
+	<link rel="stylesheet" type="text/css" href="public/header.css">
+	<link rel="stylesheet" type="text/css" href="public/left-bar.css">
+	<link rel="stylesheet" type="text/css" href="public/club-header.css">
+	<link rel="stylesheet" type="text/css" href="public/season-champions.css">
+</head>
+<body>
+	<div class="page-wrapper">
+		<div class="left-bar">
+			<div class="logo">
+				<img src="public/images/logo.png">
+			</div><!-- end logo -->
+			<div class="left-bar-wrapper">
+				<button type="button" class="main-button"><img src="public/images/in-button.png">PLAY FOR THE CLUB</button>
+				<hr class="side-bar-line">
+				<ul class="side-navigation">
+					<li class="nav-button active">
+						<div class="nav-b-img">
+							<img src="public/images/nav/img-6.png">
+						</div><!-- end nav-b-img -->
+						<div class="nav-b-title">
+							<p>My Club</p>
+						</div><!-- end nav-b-title -->
+					</li><!-- end nav-button -->
+					<li class="nav-button non-active">
+						<div class="nav-b-img">
+							<img src="public/images/nav/img-1.png">
+						</div><!-- end nav-b-img -->
+						<div class="nav-b-title">
+							<p>News & Updates</p>
+						</div><!-- end nav-b-title -->
+					</li><!-- end nav-button -->
+					<li class="nav-button non-active freinds">
+						<div class="nav-b-img">
+							<img src="public/images/nav/img-2.png">
+						</div><!-- end nav-b-img -->
+						<div class="nav-b-title">
+							<p>Friends</p>
+						</div><!-- end nav-b-title -->
+					</li><!-- end nav-button -->
+					<li class="nav-button non-active">
+						<div class="nav-b-img">
+							<img src="public/images/nav/img-3.png">
+						</div><!-- end nav-b-img -->
+						<div class="nav-b-title">
+							<p>Shop & Gifts</p>
+						</div><!-- end nav-b-title -->
+					</li><!-- end nav-button -->
+					<li class="nav-button non-active">
+						<div class="nav-b-img">
+							<img src="public/images/nav/img-4.png">
+						</div><!-- end nav-b-img -->
+						<div class="nav-b-title">
+							<p>Balance & Withdraw</p>
+						</div><!-- end nav-b-title -->
+					</li><!-- end nav-button -->
+					<li class="nav-button non-active">
+						<div class="nav-b-img">
+							<img src="public/images/nav/img-5.png">
+						</div><!-- end nav-b-img -->
+						<div class="nav-b-title">
+							<p>Settings</p>
+						</div><!-- end nav-b-title -->
+					</li><!-- end nav-button -->	
+				</ul><!-- end side-navigation -->
+			</div><!-- end left-bar-wrapper -->
+		</div><!-- end left-bar -->
+		<div class="main-view">	
+			<div class="header">
+
+			</div><!-- end header -->
+			<div class="club-header-wrapper">
+				<div class="club-header">
+					<div class="club-avatar">
+						<img src="public/images/club-avatar-img.png">
+						<div class="club-rank">
+							<p>#1461</p>
+						</div><!-- end club-rank -->
+					</div><!-- end club-avatar -->
+					<div class="club-header-bar">
+						<div class="club-info">
+							<p class="club-name">RTO's Gator Pit</p>
+							<div class="data-point">
+								<img src="public/images/avatars/leader-avatar.png" 
+								class="leader-avatar">
+								<p class="data-p">Club Leader: <br> <span>RenektonTopOnly</span></p>
+								<p class="data-p data-mar">Season Ends In: <br> <span>23:41:21</span></p>
+							</div><!-- end data-point -->
+						</div><!-- end club-info -->
+						<div class="club-stats">
+							<p class="header-sub">Club Stats</p>
+							<div class="info-point">
+								<img src="public/images/icons/club-trophy.png">
+								<p>222,541</p>
+							</div><!-- end data-point -->
+							<div class="info-point">
+								<img src="public/images/icons/club-members.png">
+								<p>210,512</p>
+							</div><!-- end data-point -->
+						</div><!-- end club-stats -->
+						<div class="club-social">
+							<p class="header-sub">Social Channels</p>
+							<div class="socials">
+								<img src="public/images/dc.png">
+								<img src="public/images/yt.png">
+								<img src="public/images/tw.png">
+							</div><!-- end socials -->
+						</div><!-- end club social -->
+					</div><!-- end club-header-bar -->
+				</div><!-- end club-header -->
+			</div><!-- end club-header-wrapper -->
+			<div class="content-wrapper">
+				<div class="season-champions">
+					<p class="comp-title">Season Champions</p>
+					<div class="champions-box">
+						<div class="champions-box-header">
+							<p>Player</p>
+							<img src="public/images/icons/champion.png">
+						</div><!-- end champions-box-header -->	
+						<div class="player-tile">
+							<img src="public/images/avatars/avatar-1.png">
+							<p class="player-info">LuciLutPopov <br> <span>Level 48</span></p>
+							<p class="player-trophies">892</p>
+						</div><!-- end player-tile -->
+						<div class="player-tile">
+							<img src="public/images/avatars/avatar-2.png">
+							<p class="player-info">Matrix Podin <br> <span>Level 33</span></p>
+							<p class="player-trophies">679</p>
+						</div><!-- end player-tile -->
+						<div class="player-tile">
+							<img src="public/images/avatars/avatar-3.png">
+							<p class="player-info">GO CK FOSU <br> <span>Level 48</span></p>
+							<p class="player-trophies">448</p>
+						</div><!-- end player-tile -->
+						<div class="player-tile">
+							<img src="public/images/avatars/avatar-4.png">
+							<p class="player-info">Fantasy Dreamer <br> <span>Level 13</span></p>
+							<p class="player-trophies">306</p>
+						</div><!-- end player-tile -->
+						<div class="player-tile">
+							<img src="public/images/avatars/avatar-5.png">
+							<p class="player-info">IspodRadara <br> <span>Level 52</span></p>
+							<p class="player-trophies">166</p>
+						</div><!-- end player-tile -->
+					</div><!-- end champions-box -->
+				</div><!-- end season-champions -->
+				<div class="season-champions other-clubs">
+					<p class="comp-title">Crush Other Clubs</p>
+					<div class="champions-box">
+						<div class="leader-box">
+							<div class="player-tile">
+								<img src="public/images/avatars/avatar-1.png">
+								<p class="player-info">RenektonTopOnly <br> <span>RTO’s Gator Pit</span></p>
+								<p class="player-trophies">892<img src="public/images/icons/leader-sword.png"></p>
+							</div><!-- end player-tile -->
+							<div class="stats-box">
+								<div class="stats-left">
+									<div class="stats-top">
+										<img src="public/images/icons/goal.png">
+										<p>Challenge</p>
+									</div><!-- end stats-top -->
+									<div class="stats-bottom">
+										<p>Max Kills</p>
+									</div><!-- end stats-bottom -->
+								</div><!-- end stats-left -->
+								<div class="stats-right">
+									<div class="stats-top">
+										<img src="public/images/icons/map.png">
+										<p>Map</p>
+									</div><!-- end stats-top -->
+									<div class="stats-bottom">
+										<p>S. Rift</p>
+									</div><!-- end stats-bottom -->				
+								</div><!-- end stats-right -->
+							</div><!-- end stats-box -->
+							<div class="stats-box stats-box-normal-margin">
+								<div class="stats-left">
+									<div class="stats-top">
+										<img src="public/images/icons/goal.png">
+										<p>Challenge</p>
+									</div><!-- end stats-top -->
+									<div class="stats-bottom">
+										<p>7/8</p>
+									</div><!-- end stats-bottom -->
+								</div><!-- end stats-left -->
+								<div class="stats-right">
+									<div class="stats-top">
+										<img src="public/images/icons/ends.png">
+										<p>Map</p>
+									</div><!-- end stats-top -->
+									<div class="stats-bottom">
+										<p>00:53:12</p>
+									</div><!-- end stats-bottom -->				
+								</div><!-- end stats-right -->
+							</div><!-- end stats-box -->
+							<div class="prize-pool">
+								<p>Current Prize Pool: <img src="public/images/icons/coin.png"> <span>1,720</span></p>
+							</div><!-- end prize-pool -->
+							<button class="main-button" type="button">CRUSH IT</button>
+						</div><!-- end leader-box -->
+					</div><!-- end champions-box -->
+				</div><!-- end season-champions -->
+				<div class="season-champions other-clubs">
+					<p class="comp-title">This ad supports Fantasy Ninjas club!</p>
+					<div class="champions-box ads">
+						<iframe width="390" height="270" class="yt-box" src="https://www.youtube.com/embed/EH0K1o_6hTM?controls=0&autoplay=1&loop=1&mute=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div><!-- end champions-box -->
+				</div><!-- end season-champions -->
+			</div><!-- end content-wrapper -->
+		</div><!-- end main-view -->
+	</div><!-- end page-wrapper -->
+</body>
+</html>
