--- a/index.html
+++ b/index.html
@@ -73,7 +73,25 @@
 		</div><!-- end left-bar -->
 		<div class="main-view">	
 			<div class="header">
-
+				<div class="control-buttons">
+					<img src="public/images/icons/mini.png" class="mini-top">
+					<img src="public/images/icons/close.png">
+				</div><!-- end control-buttons -->
+				<div class="user-wrapper">
+					<img src="public/images/avatars/avatar-6.png" class="user-avatar">
+					<p class="player-info">Jovan Belic <br> <span>Level 48</span></p>
+					<img src="public/images/icons/club-arrow.png" class="club-arrow">
+				</div><!-- end user-wrapper -->
+				<div class="notification-wrapper">
+					<div class="notif-box">
+						<img src="public/images/icons/notif.png">
+					</div><!-- end notif-box -->
+				</div><!-- end notifcation-wrapper -->
+				<div class="balance">	
+					<p class="balance-t">Balance</p>
+					<img src="public/images/icons/coin.png">
+					<p class="coin-balance">1,875</p>
+				</div><!-- end balance -->
 			</div><!-- end header -->
 			<div class="club-header-wrapper">
 				<div class="club-header">
@@ -183,7 +201,7 @@
 								<div class="stats-left">
 									<div class="stats-top">
 										<img src="public/images/icons/goal.png">
-										<p>Challenge</p>
+										<p>Players</p>
 									</div><!-- end stats-top -->
 									<div class="stats-bottom">
 										<p>7/8</p>
