--- a/play.html
+++ b/play.html
@@ -97,6 +97,12 @@
 			</div><!-- end left-bar-wrapper -->
 		</div><!-- end left-bar -->
 		<div class="main-view">	
+				<div class="season-champions other-clubs">
+					<p class="comp-title">This ad supports Fantasy Ninjas club!</p>
+					<div class="champions-box ads">
+						<iframe width="390" height="270" class="yt-box" src="https://www.youtube.com/embed/EH0K1o_6hTM?controls=0&autoplay=1&loop=1&mute=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div><!-- end champions-box -->
+				</div><!-- end season-champions -->			
 			<div class="header">
 				<div class="control-buttons">
 					<img src="public/images/icons/mini.png" class="mini-top">
@@ -164,13 +170,32 @@
 						<p class="chal-name">Max CS</p>
 					</div><!-- end challange-box -->																			
 				</div><!-- end maps -->
-				<div class="maps challanges">
+				<div class="maps maps-live">
 					<p class="comp-title">Live Challenge <span>(Refresh in: 9s)</span></p>
 					<div class="live-box">
 						<p class="live-box-title">Current Winner:</p>
 						<img src="public/images/avatars/avatar-2.png" class="current-winner">
 						<p class="winner-name">Sleepx mettos Po <br><span>RTO’s Gator Pit</span></p>
-					</div><!-- end liv-box -->										
+					</div><!-- end liv-box -->
+					<div class="live-box live-box-sec">
+						<p class="live-box-title">Current High Score:</p>
+						<p class="live-big-text">56</p>
+						<p class="live-small-text">ASSISTS</p>
+					</div><!-- end liv-box -->
+					<div class="live-box live-box-sec live-box-third">
+						<p class="live-box-title">Players:</p>
+						<p class="live-big-text">5/8</p>
+					</div><!-- end liv-box -->
+					<div class="live-box live-box-sec live-box-four">
+						<p class="live-box-title">Ends In:</p>
+						<p class="live-big-text">00:35:21</p>
+					</div><!-- end liv-box -->
+					<div class="chal-prize-pool">
+						<p>Current Prize Pool:<img src="public/images/icons/coin.png"><span>1,720</span></p>
+					</div><!-- end chal-prize-pool -->
+					<div class="start-button-wrapper">
+						<button type="button" class="main-button start-button" onclick="play();"><img src="public/images/in-button.png">START CHALLENGE</button>	
+					</div><!-- end start-button-wrapper -->
 				</div><!-- end maps -->										
 			</div><!-- end play-wrapper -->
 		</div><!-- end main-view -->
