--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<div class="nav-b-img">
 							<img src="public/images/nav/img-3.png">
 						</div><!-- end nav-b-img -->
-						<div class="nav-b-title">
+						<div class="nav-b-title" onclick="shop();">
 							<p>Shop & Raffles</p>
 						</div><!-- end nav-b-title -->
 					</li><!-- end nav-button -->					
