--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<p>News & Updates</p>
 						</div><!-- end nav-b-title -->
 					</li><!-- end nav-button -->
-					<li class="nav-button non-active">
+					<li class="nav-button non-active" onclick="clubs();">
 						<div class="nav-b-img">
 							<img src="public/images/nav/img-7.png">
 						</div><!-- end nav-b-img -->
