--- a/shop.html
+++ b/shop.html
@@ -37,7 +37,7 @@
 							<p>News & Updates</p>
 						</div><!-- end nav-b-title -->
 					</li><!-- end nav-button -->
-					<li class="nav-button non-active">
+					<li class="nav-button non-active" onclick="clubs();">
 						<div class="nav-b-img">
 							<img src="public/images/nav/img-7.png">
 						</div><!-- end nav-b-img -->
@@ -63,7 +63,7 @@
 					</li><!-- end nav-button -->
 					<li class="nav-button active">
 						<div class="nav-b-img">
-							<img src="public/images/nav/img-3.png">
+							<img src="public/images/nav/img-15.png">
 						</div><!-- end nav-b-img -->
 						<div class="nav-b-title">
 							<p>Shop & Raffles</p>
